test/pass/exceptions/catch_exception_in_return.lly
define f(input: List[Integer]): Option[Integer]
{
    try:
        return input.pop() |> Some
    except Exception:
        return None
}

f([])
